Emptying a local trash folder containing another folder causes problems for virtual folders
Categories
(MailNews Core :: General, defect)
Tracking
(thunderbird115 fixed)
Tracking | Status | |
---|---|---|
thunderbird115 | --- | fixed |
People
(Reporter: darktrojan, Assigned: darktrojan)
References
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
rjl
:
approval-comm-beta+
|
Details | Review |
This is quite similar to bug 528667, but there are more problems. They all happen when the local folders trash folder contains a deleted folder, and affect the unified folders trash virtual folder.
- The removal of the deleted folder is not notified, so it is not removed from the virtual folder's search folders.
- The removal and recreation of the real trash folder causes it to be removed from the virtual folder's search folders but not added back. This is because the deleted folder's URI is still in the list, and the trash folder's URI matches the start of that string. We're not checking for exact matches and we should be.
- If the removal notifications are fixed (or if there had been messages but no deleted folder in the trash), emptying the trash causes the virtual folder to be removed. For user-created virtual folders this makes some kind of sense, but not for the unified folders. Especially in the case of the trash unified folder, which would have a folder to search again immediately.
Assignee | ||
Comment 1•2 years ago
|
||
- Notifies nsIFolderListener listeners of all folders that get removed via
nsMsgDBFolder::RecursiveDelete
so they can properly be removed from virtual folders. - When a folder is created and should be added to a virtual folder, checks for an exact match of
the URI in the virtual folder's searchFolderUri property. - If the last searched folder in a virtual folder is removed, keeps the virtual folder if it has a
searchFolderFlag property value.
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/1128a563e54c
Fix problems with emptying the Local Folders trash and Unified Folders. r=mkmelin
Updated•2 years ago
|
Comment 3•2 years ago
|
||
uplift to beta? I think it will clear up https://treeherder.mozilla.org/jobs?repo=comm-beta&selectedTaskRun=X-NiLS89RleIH58-r_7HQA.0
Assignee | ||
Comment 4•2 years ago
|
||
Oh, the missing milestone meant it wasn't on my list. Go for it.
Comment 5•2 years ago
|
||
Comment on attachment 9337820 [details]
Bug 1837137 - Fix problems with emptying the Local Folders trash and Unified Folders. r=#thunderbird-reviewers
[Approval Request Comment]
Should fix the test failure indicated in bug 1838067.
Comment 6•2 years ago
|
||
Comment on attachment 9337820 [details]
Bug 1837137 - Fix problems with emptying the Local Folders trash and Unified Folders. r=#thunderbird-reviewers
[Triage Comment]
Approved for beta.
Comment 7•2 years ago
|
||
bugherder uplift |
Thunderbird 115.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/33f6e7ffaa4a
Description
•