Bug 1837137 - Fix problems with emptying the Local Folders trash and Unified Folders. r=mkmelin - Notifies nsIFolderListener listeners of all folders that get removed via   `nsMsgDBFolder::RecursiveDelete` so they can properly be removed from virtual folders. - When a folder is created and should be added to a virtual folder, checks for an exact match of   the URI in the virtual folder's searchFolderUri property. - If the last searched folder in a virtual folder is removed, keeps the virtual folder if it has a   searchFolderFlag property value.

Differential Revision: https://phabricator.services.mozilla.com/D180182

--HG--
rename : mailnews/base/test/unit/test_virtualFolders.js => mailnews/base/test/unit/test_virtualFolders1.js
extra : rebase_source : d4727907304c905b1debcf80d9f071b6cf611ceb
extra : amend_source : eae6bcad12bf7d67bc928a4184f5ac1e8a5b22dd